// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar Theme Toggle > renders correctly in dark mode 1`] = `
<div>
  <div
    class="navbar"
  >
    <h1>
      Anand Kumar
    </h1>
    <ul>
      <li>
        Home
      </li>
      <li>
        Projects
      </li>
      <li>
        About
      </li>
    </ul>
    <div
      class="search-box"
    >
      <input
        placeholder="Search"
        type="text"
      />
      <img
        alt=""
        src="/src/assets/search-b.png"
      />
    </div>
    <img
      alt="Toggle Theme"
      class="navbar-theme-toggle"
      data-testid="theme-toggle"
      src="/src/assets/day.png"
    />
  </div>
</div>
`;

exports[`Navbar Theme Toggle > renders correctly in light mode 1`] = `
<div>
  <div
    class="navbar"
  >
    <h1>
      Anand Kumar
    </h1>
    <ul>
      <li>
        Home
      </li>
      <li>
        Projects
      </li>
      <li>
        About
      </li>
    </ul>
    <div
      class="search-box"
    >
      <input
        placeholder="Search"
        type="text"
      />
      <img
        alt=""
        src="/src/assets/search-w.png"
      />
    </div>
    <img
      alt="Toggle Theme"
      class="navbar-theme-toggle"
      data-testid="theme-toggle"
      src="/src/assets/night.png"
    />
  </div>
</div>
`;
